src/objects/AB2__AccountSegmentation__c.object
<CustomObject>
    <description>Tracks the relationship between Salesforce and AdBook Client/Agency Accounts. Each Salesforce Account can have multiple AdBook Accounts as defined by the segment.</description>
    <fields>
        <fullName>AB2__ABAccountID__c</fullName>
        <description>The AdBook Client/Agency Id</description>
        <externalId>true</externalId>
        <inlineHelpText>The AdBook Client/Agency Id</inlineHelpText>
        <label>AdBook Account ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__Account__c</fullName>
        <description>The parent Account that has been segmented in AdBook</description>
        <inlineHelpText>The parent Account that has been segmented in AdBook</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The parent Account should have the AB Account Type defined.</errorMessage>
            <filterItems>
                <field>Account.AB2__ABAccountType__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdBook Account Segmentations</relationshipLabel>
        <relationshipName>AdBook_Account_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The primary Account segment for the parent Account. Will own the child Contacts in AdBook.</description>
        <inlineHelpText>The primary Account segment for the parent Account. Will own the child Contacts in AdBook.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Segment__c</fullName>
        <description>The segment for this Account</description>
        <inlineHelpText>The segment for this Account</inlineHelpText>
        <label>Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AdBook Account Segmentation</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Account Segmentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>